project page template finished

--- a/css/style.css
+++ b/css/style.css
@@ -13908,3 +13908,31 @@ ul>li>i {
 .paragrahpeOneLine {
   min-height: 58px;
 }
+
+.bg-484b4e {
+  background-color: #484b4e;
+}
+
+.bg-FFDF3B {
+  background-color: #FFDF3B;
+}
+
+.bg-2C3E50 {
+  background-color: #2C3E50;
+}
+
+.bg-202427 {
+  background-color: #202427;
+}
+
+.bg-baa32b {
+  background-color: #baa32b;
+}
+
+.bg-e7eae6 {
+  background-color: #e7eae6;
+}
+
+.bg-EAE8E7 {
+  background-color: #EAE8E7;
+}
